Code simplifications, performance and quality improvements, small bugfixes